--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@agility/content-fetch": "^1.1.5",
     "@agility/content-sync": "^1.1.5",
     "@netlify/sdk": "^1.0.5",
+    "axios": "^1.5.1",
+    "chalk": "^5.3.0",
     "typescript": "^5.2.2"
   }
 }
