--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command="ntli build -a"
+command="netlify-integration build -a"
 publish=".ntli/site/static"
 
 [functions]
@@ -15,3 +15,5 @@ Access-Control-Allow-Methods="*"
 
 [dev]
 autoLaunch = false
+functions = ".ntli/site/netlify/functions"
+publish = ".ntli/site/static"
